# magpie-backend

./: .env.example  Dockerfile  README.md  WHY.md  docker-entrypoint.sh  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  heal-on-failure.yml  nightly-scrape.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
configs/: arxiv-cs.yaml  demo-broken.yaml  github-trending.yaml  hackernews.yaml  huggingface-papers.yaml  lobsters.yaml  producthunt-today.yaml  weather-live.yaml  wikipedia-current-events.yaml
docs/: ARCHITECTURE.md  DEMO.md
docs/specs/: 00-config.md  01-factory.md  02-dedupe.md  03-healer.md  04-workflows.md  05-viewer-api.md  06-batch-scrape.md
fixtures/: fake-shop.html  hackernews-page2.html  hackernews-v1.html  hackernews-v2-broken.html
scripts/: dev.sh  set-secrets.sh
src/magpie/: __init__.py  cli.py  factory.py  lifespan.py  main.py  paths.py
src/magpie/api/: __init__.py  deps.py  items_view.py
src/magpie/config/: loader.py  registry.py  schema.py
src/magpie/core/: hashing.py
src/magpie/healer/: apply.py  detector.py  github_pr.py  run.py  selector_fixer.py  validator.py
src/magpie/platform/: health.py  logging.py  metrics.py  middleware.py
src/magpie/playwright/: runner.py
src/magpie/queue/: __init__.py  app.py  tasks.py
src/magpie/schemas/: __init__.py  jobs.py  scrape.py  sources.py
src/magpie/scrapy/: factory.py  settings.py
src/magpie/services/: __init__.py  scrape_service.py
src/magpie/storage/: db.py  heals_repo.py  items_repo_pg.py  models.py  repo.py  run_repo.py  runs_repo_pg.py  sources_repo.py
tests/: conftest.py  test_smoke.py
tests/e2e/: test_heal_flow.py
tests/integration/: test_dedupe.py  test_playwright_local.py  test_scrapy_local.py  test_viewer_api.py
tests/unit/: test_cli.py  test_config.py  test_config_loader_errors.py  test_factory.py  test_github_pr.py  test_hashing.py  test_lifespan.py  test_main_coverage.py  test_models_and_migrations.py  test_paths.py  test_platform_module.py  test_platform_token.py  test_playwright_runner.py  test_scrapy_factory_coverage.py  test_scrapy_settings.py  test_selector_fixer.py  test_selector_fixer_llm.py  test_storage_db.py
tests/unit/api/: test_jobs_router.py  test_scrape_router.py  test_sources_router.py
tests/unit/healer/: test_apply.py  test_run_cli.py
tests/unit/queue/: test_tasks.py
tests/unit/services/: test_scrape_service.py
tests/unit/storage/: test_heals_repo.py  test_items_repo_pg.py  test_runs_repo_pg.py  test_sources_repo.py
(+5 files in other folders)
