[project]
name = "magpie"
version = "0.1.0"
description = "YAML-defined scrapers that self-heal via LLM + PR"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Abdul-Muizz", email = "abdulmuizz1310@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
magpie = "magpie:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
