[project]
name = "magpie"
version = "0.1.0"
description = "YAML-defined scrapers that self-heal via LLM + PR"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Abdul-Muizz", email = "abdulmuizz1310@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.30",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "parsel>=1.11.0",
    "playwright>=1.58.0",
    "procrastinate>=3.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scrapy>=2.15.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[project.scripts]
magpie = "magpie.cli:main"
magpie-heal = "magpie.healer.run:main"

[build-system]
requires = ["uv_build>=0.9.17,<1.0.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "N806", "F841"]
"alembic/env.py" = ["E402"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "playwright.*",
    "sqlalchemy.*",
    "parsel.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
